--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ section {
 	margin: 0 auto;
 	max-width: 1000px;
 }
+@media screen and (max-width: 600px) {
+    .container {
+        width: 100%;
+        padding: 0 20px;
+    }
+}
 p {
 	font-size: 1.6rem;
 	color: var(--secondary-black);
