--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Roboto+Mono:wght@300;500&family=Poppins:wght@600&display=swap');
+
 /* variables */
 :root {
 	--primary-color: #ed290a;
@@ -13,19 +14,23 @@
 	margin: 0;
 	box-sizing: border-box;
 }
+
 html {
     color: #f99f04;
 	font-family: 'Roboto Mono';
 	font-size: 10px;
 	scroll-behavior: smooth;
 }
+
 body {
 	background-color: var(--body-bg);
 }
+
 img {
 	width: 100%;
-	height: 100%;
+	height: auto; /* Adjusted to maintain aspect ratio */
 }
+
 a {
 	color: rgb(255, 255, 255);
 	text-decoration: none;
@@ -36,21 +41,25 @@ section {
 	align-items: center;
 	justify-content: center;
 }
+
 .container {
 	width: 90%;
 	margin: 0 auto;
 	max-width: 1000px;
 }
+
 @media screen and (max-width: 600px) {
     .container {
         width: 100%;
         padding: 0 20px;
     }
 }
+
 p {
 	font-size: 1.6rem;
 	color: var(--secondary-black);
 }
+
 .section-heading {
 	font-size: clamp(2rem, 10vw, 8rem);
 	text-transform: uppercase;
@@ -60,24 +69,22 @@ p {
 	position: relative;
 	margin-bottom: 10rem;
 }
-.section-heading::before {
 
+.section-heading::before {
 	content: attr(data-outline);
 	position: absolute;
 	left: 2%;
 	top: -20%;
 	width: 100%;
-
 	text-align: center;
 	text-transform: uppercase;
 	font-family: 'Montserrat';
 	letter-spacing: 0.2rem;
-
 	color: transparent;
-	/* -webkit-text-stroke: 1.5px rgba(0, 0, 0, 0.103); */
 	-webkit-text-stroke: 1.5px rgba(255, 255, 0, 0.199);
 	z-index: -1;
 }
+
 .buttons {
 	margin-top: 3rem;
 	display: flex;
@@ -85,6 +92,7 @@ p {
 	justify-content: flex-start;
 	gap: 2rem;
 }
+
 .primary-btn {
 	display: inline-block;
 	background-color: var(--primary-color);
@@ -92,12 +100,15 @@ p {
 	font-size: 1.8rem;
 	padding: 0.6em 1.6em;
 	border-radius: 50px;
+	transition: background-color 0.3s;
 }
+
 .buttons .primary-btn.outline {
 	background-color: transparent;
 	border: 2px solid var(--primary-color);
 	color: var(--primary-color);
 }
+
 .buttons svg {
 	width: 50px;
 	color: var(--primary-color);
@@ -115,15 +126,13 @@ p {
 	cursor: pointer;
 	border-radius: 6px;
 	box-shadow: 0px 0px 20px rgba(251, 30, 1, 0.792);
-	/* hover effect default */
 	transform: scale(0.9);
 	transition: 0.3s ease-in-out transform;
-	/* for centering the icon */
-	/* display: flex; */
-	display: none;
+	display: none; /* Initially hidden */
 	align-items: center;
 	justify-content: center;
 }
+
 .scroll-top svg {
 	width: 50%;
 	color: black;
@@ -142,6 +151,7 @@ p {
 	top: 20px;
 	z-index: 100;
 }
+
 #navigation .nav-icon {
 	width: 50px;
 	height: 50px;
@@ -153,10 +163,12 @@ p {
 	align-items: center;
 	justify-content: center;
 }
+
 #navigation .nav-icon svg {
 	width: 80%;
 	color: white;
 }
+
 #nav-content {
 	position: fixed;
 	right: 0;
@@ -173,40 +185,47 @@ p {
 	transform: translateX(100%);
 	transition: 0.3s ease transform;
 }
+
 #nav-content.show {
 	transform: translateX(0);
 	box-shadow: -6px 0px 29px 7px #000000a3;
 }
+
 #nav-content .section-heading {
     color: #000000;
 	text-align: left;
 }
+
 #nav-content .section-heading::before {
     color: #1a1a1a7b;
 	content: 'Menu';
 	text-align: left;
 	-webkit-text-stroke: 1.5px #afadadaa;
 }
+
 #nav-content .wrapper {
-    
-	width: 70%;
+    width: 70%;
 	position: relative;
 }
+
 #nav-content ul {
 	list-style: none;
 	text-align: left;
 }
+
 #nav-content ul li {
 	margin-bottom: 2rem;
 }
+
 #nav-content ul li a {
 	display: inline-block;
 	width: 100%;
 	color: rgb(230, 108, 21);
 	font-size: 5rem;
 	font-family: 'Montserrat';
-	/* position: relative; */
+	position: relative;
 }
+
 #nav-content ul li a::after {
 	content: attr(data-text);
 	pointer-events: none;
@@ -223,10 +242,12 @@ p {
 	text-align: center;
 	transform: rotate(90deg) scale(3);
 }
+
 #nav-content ul li a:hover::after {
 	opacity: 1;
 	transform: scale(3) translateY(10px) rotate(90deg);
 }
+
 #nav-content .close-btn {
 	position: absolute;
 	left: 10px;
@@ -242,33 +263,42 @@ p {
 	cursor: pointer;
 	transition: 0.3s ease background-color;
 }
+
 #nav-content .close-btn:hover {
 	background-color: crimson;
 }
+
 #nav-content .close-btn svg {
 	width: 80%;
 }
+
 @media only screen and (max-width: 768px) {
 	#navigation {
 		right: 10px;
 		top: 10px;
 	}
+
 	#nav-content nav ul li a::after {
 		display: none;
 	}
+
 	#nav-content .section-heading {
 		text-align: right;
 		margin-bottom: 5rem;
 	}
+
 	#nav-content .section-heading::before {
 		text-align: right;
 	}
+
 	#nav-content nav ul {
 		text-align: right;
 	}
+
 	#nav-content nav ul li a {
 		font-size: 2.5rem;
 	}
+
 	#nav-content .wrapper {
 		width: 90%;
 	}
@@ -280,15 +310,17 @@ p {
 	width: 100%;
 	padding-top: 10rem;
 }
+
 #hero .container {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
+
 #hero .container .left {
 	flex: 6;
-	/* padding-right: 3rem; */
 }
+
 #hero .container .right {
 	flex: 8;
 }
@@ -302,24 +334,25 @@ p {
 	animation-delay: 1.1s;
 	opacity: 0;
 }
+
 #hero .left .heading {
 	font-size: 6rem;
 	font-family: 'Montserrat';
 	font-weight: 900;
-	/* max-width: 400px; */
 	overflow: hidden;
 }
+
 #hero .left .heading .wrapper {
-	/* position: relative; */
 	display: inline-block;
 	overflow: hidden;
-	/* border: 1px solid red; */
 }
+
 #hero .left .heading .wrapper span {
 	position: relative;
 	bottom: -70px;
 	animation: reveal 1s ease-in-out forwards;
 }
+
 @keyframes reveal {
 	0% {
 		bottom: -70px;
@@ -328,6 +361,7 @@ p {
 		bottom: 0px;
 	}
 }
+
 @keyframes fade {
 	0% {
 		opacity: 0;
@@ -336,6 +370,7 @@ p {
 		opacity: 1;
 	}
 }
+
 #hero .left .desc {
 	margin-top: 2.5rem;
 	max-width: 400px;
@@ -343,6 +378,7 @@ p {
 	animation-delay: 1.1s;
 	opacity: 0;
 }
+
 #hero .left .buttons {
 	animation: fade 0.3s ease-in forwards;
 	animation-delay: 1.1s;
@@ -352,6 +388,7 @@ p {
 #hero .right {
 	text-align: right;
 }
+
 #hero .right img {
 	box-shadow: 20px 20px 20px #7304e2e8;
 	width: 100%;
@@ -362,158 +399,90 @@ p {
 	border-radius: 12px;
 }
 
-@media only screen and (max-width: 768px) {
-	html {
-		font-size: 9px;
+@media only screen and (max-width: 600px) {
+	#hero {
+		height: auto;
+		padding-top: 5rem;
 	}
+
 	#hero .container {
-		flex-direction: column-reverse;
-	}
-	#hero .container .right {
-		text-align: center;
-		flex: 1;
-		margin-bottom: 2rem;
-	}
-	#hero .container .left {
-		text-align: center;
-		padding-right: 0;
-		flex: 1;
-		height: fit-content;
-	}
-	#hero .left .buttons {
-		justify-content: center;
-	}
-	#hero .left .heading {
-		font-size: 4rem;
-		margin: 0 auto;
-	}
-	#hero .container .left .desc {
-		margin: 0 auto;
-		margin-top: 2rem;
-	}
-	#hero .right img {
-		width: 100%;
-		height: 400px;
-	}
-}
-@media only screen and (max-width: 950px) {
-	#hero .container .right {
-		flex: 6;
-	}
-}
-
-
-/* Stats Section Style*/
-#stats {
-	padding: 20rem 0 10rem 0;
-}
-
-#stats .all-items {
-	display: flex;
-	align-items: stretch;
-	justify-content: left;
-}
-#stats .all-items .item {
-	padding: 2rem;
-}
-
-#stats .stats-sub-heading {
-	font-size: 2rem;
-	margin-bottom: 2rem;
-}
-
-#stats .all-items .item:nth-child(1) {
-	background-color: rgba(255, 0, 238, 0.411);
-	margin-right : 20px;
-}
-#stats .all-items .item:nth-child(2) {
-	background-color: rgba(0, 255, 115, 0.329);
-	margin-right: 20px;
-}
-#stats .all-items .item:nth-child(3) {
-	background-color: #4705fc50;
-	margin-right: 20px;
-}
-#stats .all-items .item:nth-child(4) {
-	background-color: #fc050550;
-}
-@media only screen and (max-width: 800) {
-	#stats .all-items {
 		flex-direction: column;
 	}
+
+	#hero .left .heading {
+		font-size: 4rem; /* Reduced for smaller screens */
+	}
+
+	#hero .left .subheading {
+		font-size: 1.5rem; /* Adjusted for smaller screens */
+	}
+
+	#hero .left .desc {
+		font-size: 1.5rem; /* Adjusted for smaller screens */
+	}
+
+	#hero .left .buttons {
+		flex-direction: column;
+	}
+
+	#hero .right img {
+		max-width: 100%; /* Full width on smaller screens */
+		height: auto; /* Maintain aspect ratio */
+	}
 }
 
-/* About section  */
+/* About Section Styles */
 #about {
-	padding: 15rem 0;
+	padding: 5rem 0;
 }
+
+#about .container {
+	flex-direction: column;
+}
+
 #about .wrapper {
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	gap: 30px;
+	justify-content: space-between;
 }
-#about .left {
-	padding: 2rem;
-	text-align: ;
+
+#about .wrapper .left {
+	flex: 5;
 }
-#about .left .card {
-	box-shadow: 0px 0px 20px #fefdffd4;
-	padding: 3rem;
-	border-radius: 52px;
-	min-height: 400px;
+
+#about .wrapper .right {
+	flex: 4;
 }
-#about .left .card .img {
-	width: 100px;
-	height: 100px;
-	margin: 0 auto;
-	border-radius: 50%;
-	overflow: hidden;
-	margin-bottom: 2rem;
-}
-#about .left .card .img img {
-	object-fit: cover;
-}
-#about .left .card .card-desc {
-	color: var(--secondary-gray);
-	margin-bottom: 4rem;
-}
-#about .left .card .card-name {
-	font-size: 2rem;
-	margin-bottom: 0.2rem;
-}
-#about .left .card .card-sub-title {
-	font-size: 1.4rem;
-}
-#about .subheading {
-	color: var(--primary-color);
-	margin-bottom: 1rem;
-}
-#about .right .slogan {
-	font-size: 2.5rem;
-	margin-bottom: 2rem;
-}
-#about .right .right-text {
-	color: var(--secondary-gray);
-}
-@media only screen and (max-width: 768px) {
+
+@media only screen and (max-width: 600px) {
 	#about .wrapper {
-		flex-direction: column-reverse;
-		text-align: center;
-	}
-	#about .right .buttons {
-		flex-direction: column;
-	}
-	#about .right .buttons a {
-		width: 100%;
-		text-align: center;
+		flex-direction: column; /* Stack on smaller screens */
 	}
 }
 
-/* Projects Section */
+/* Projects Section Styles */
 #projects {
-	padding: 10rem 0;
+	padding: 5rem 0;
 }
+
+#projects .container {
+	flex-direction: column;
+}
+
+#projects .grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	gap: 2rem;
+}
+
+@media only screen and (max-width: 600px) {
+	#projects .grid {
+		grid-template-columns: repeat(auto-fill, minmax(100%, 1fr)); /* Adjust grid for small screens */
+	}
+}
+
+
+/* Projects Section */
+
 #projects .item {
 	display: flex;
 	align-items: center;
